Fix SurfaceIds in mus with surface sync off.

WindowPortMus was sending SurfaceIds (a) too early and (b) that weren't
the right SurfaceId causing lots of log spam with mus and surface sync
turned off.

BUG=711544

Review-Url: https://codereview.chromium.org/2831763002
Cr-Commit-Position: refs/heads/master@{#465767}

Former-commit-id: 8761c218a237d2bd6ea05547ad5e578de0a9a855